[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if crate_type == "bin" %}
clap = { version = "4.1", features = ["cargo"] }
env_logger = "0.10"
log = "0.4"
color-eyre = "0.5"
anyhow = "1.0"
{% endif %}